[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Bone.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Items/bone.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Effectors/Pickup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/reward.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 14.5 )

[node name="Bone" type="Node2D"]
script = ExtResource( 1 )
scrollSpeed = 4.7

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.500001, 1 )
scale = Vector2( 0.131841, 0.181818 )
texture = ExtResource( 2 )

[node name="Pickup" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Pickup" to="." method="_on_Pickup_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
